[package]
name = "gitg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asyncgit = { git = "https://github.com/extrawurst/gitui.git", rev = "4682a1b" }
git2 = "*"
egui = "0.21.0"
eframe = { version = "*", features = ["wgpu"] }
egui-wgpu = "*"
notify = { git = "https://github.com/notify-rs/notify.git", rev = "4a3f5a3" }
tokio = { version = "1.29.1", features = ["full"] }
